--- a/ThrottledStreamTests/StreamLibTests.csproj
+++ b/ThrottledStreamTests/StreamLibTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ThrottledStream\ThrottledStream.csproj" />
+    <ProjectReference Include="..\ThrottledStream\StreamLib.csproj" />
   </ItemGroup>
 
 </Project>
