--- a/StreamLibTests/StreamLibTests.csproj
+++ b/StreamLibTests/StreamLibTests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ThrottledStream\StreamLib.csproj" />
+    <ProjectReference Include="..\StreamLib\StreamLib.csproj" />
   </ItemGroup>
 
 </Project>
