--- a/StreamLib/StreamLib.csproj
+++ b/StreamLib/StreamLib.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-	<Version>0.5.1</Version>
-	<IsPackable>true</IsPackable>
-	<AssemblyName>StreamLib</AssemblyName>
-	<RootNamespace>StreamLib</RootNamespace>
+	  <Version>0.6.0</Version>
+	  <IsPackable>true</IsPackable>
+	  <AssemblyName>StreamLib</AssemblyName>
+	  <RootNamespace>StreamLib</RootNamespace>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
