--- a/StreamLib/StreamLib.csproj
+++ b/StreamLib/StreamLib.csproj
@@ -9,4 +9,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="README.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
