--- a/StreamLib/StreamLib.csproj
+++ b/StreamLib/StreamLib.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-	  <Version>0.7.1</Version>
+	  <Version>0.7.2</Version>
 	  <IsPackable>true</IsPackable>
 	  <AssemblyName>StreamLib</AssemblyName>
 	  <RootNamespace>StreamLib</RootNamespace>
@@ -10,9 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="README.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <None Include=".\README.md" Pack="true" PackagePath="." />
   </ItemGroup>
 
 </Project>
