--- a/StreamLib/StreamLib.csproj
+++ b/StreamLib/StreamLib.csproj
@@ -13,4 +13,10 @@
     <None Include=".\README.md" Pack="true" PackagePath="." />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="README.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
