--- a/StreamLib/StreamLib.csproj
+++ b/StreamLib/StreamLib.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-	  <Version>0.7.3</Version>
+    <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
+    <LangVersion>8.0</LangVersion>
+	  <Version>0.8.0</Version>
 	  <IsPackable>true</IsPackable>
 	  <AssemblyName>StreamLib</AssemblyName>
 	  <RootNamespace>StreamLib</RootNamespace>
